1998-11-02  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* eword-decode.el (mime-decode-header-in-region): New function.
	(mime-decode-header-in-buffer): Use function
	`mime-decode-header-in-region'.

1998-10-28  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mmgeneric.el (mime-insert-header-from-buffer): Refer
	`mime-field-decoder-alist' instead of hard-coding.

	* mime.el (mime-read-field): Use `mime-decode-field-body'.

	* eword-decode.el (eword-decode-and-unfold-structured-field): Add
	optional dummy argument `start-column' and `max-column'.
	(eword-decode-structured-field-body): Change interface.
	(eword-decode-unstructured-field-body): Change interface to add
	optional dummy argument `start-column' and `max-column'.
	(eword-decode-and-unfold-unstructured-field): Add optional dummy
	argument `start-column' and `max-column'.
	(mime-field-decoder-alist): New variable; abolish user option
	`eword-decode-ignored-field-list' and
	`eword-decode-structured-field-list'.
	(mime-set-field-decoder): New function.
	(mime-find-field-decoder): New function.
	(mime-decode-field-body): New function; abolish function
	`eword-decode-field-body'.
	(mime-decode-header-in-buffer): Renamed from
	`eword-decode-header'; refer `mime-field-decoder-alist' instead of
	hard-coding; add obsolete alias `eword-decode-header'.

1998-10-28  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-def.el: Avoid compile error when ediff is missing.


1998-10-28  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* FLIM: Version 1.11.3 (Saidaiji) was released.

1998-10-27  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* VERSION: New file (Renamed from FLIM-VERSION).

1998-10-27  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* eword-encode.el (eword-encode-char-type): Return nil for ?\n.

1998-10-27  Tanaka Akira      <akr@jaist.ac.jp>

	* eword-encode.el (eword-encode-field-body): Unfold `field-body'.

1998-10-27  Yoshiki Hayashi   <g740685@komaba.ecc.u-tokyo.ac.jp>

	* README.ja: Update.

